Fix post header spacing and comment date to include time also

--- a/src/AppBundle/Resources/public/css/base.css
+++ b/src/AppBundle/Resources/public/css/base.css
@@ -235,7 +235,6 @@ label {
 }
 
 .post h1 {
-    margin-top : 0;
     font-size  : 1.5em;
 }
 
